--- a/requirements.txt
+++ b/requirements.txt
@@ -1,58 +1,58 @@
 black==23.3.0
 bleach==6.0.0
-boto3==1.26.114
-botocore==1.29.114
-certifi==2022.12.7
-charset-normalizer==3.1.0
-click==8.1.3
+boto3==1.33.13
+botocore==1.33.13
+certifi==2023.11.17
+charset-normalizer==3.3.2
+click==8.1.7
 daves-dev-tools==2.0.8
-distlib==0.3.6
-docutils==0.19
-exceptiongroup==1.1.1
+distlib==0.3.8
+docutils==0.20.1
+exceptiongroup==1.2.0
 filelock
 flake8==5.0.4
-idna==3.4
+idna==3.6
 importlib-metadata
 iniconfig==2.0.0
 jaraco.classes==3.2.3
 jmespath==1.0.1
 keyring==23.9.3
-localstack-client==2.0
-lxml==4.9.2
+localstack-client==2.5
+lxml==5.1.0
 markdown-it-py==2.2.0
 mccabe==0.7.0
 mdurl==0.1.2
 more-itertools==9.1.0
 mypy-extensions==1.0.0
-mypy==1.2.0
-packaging==23.1
-pathspec==0.11.1
+mypy==1.4.1
+packaging==23.2
+pathspec==0.11.2
 pkginfo==1.9.6
 platformdirs
-pluggy==1.0.0
+pluggy==1.2.0
 py4j==0.10.9.7
 py==1.11.0
 pycodestyle==2.9.1
 pyflakes==2.5.0
-Pygments==2.15.0
-pyspark==3.4.0
-pytest==7.3.1
+pygments==2.17.2
+pyspark==3.4.2
+pytest==7.4.4
 python-dateutil==2.8.2
 readme-renderer==37.3
-requests-toolbelt==0.10.1
-requests==2.28.2
+requests-toolbelt==1.0.0
+requests==2.31.0
 rfc3986==2.0.0
-rich==13.3.4
-s3transfer==0.6.0
+rich==13.7.0
+s3transfer==0.8.2
 setuptools
 six==1.16.0
 tomli-w==1.0.0
 tomli==2.0.1
 tox==3.28.0
 twine==4.0.2
-typed-ast==1.5.4
-typing-extensions==4.5.0
-urllib3==1.26.15
+typed-ast==1.5.5
+typing-extensions==4.7.1
+urllib3==1.26.18
 virtualenv==20.16.2
 webencodings==0.5.1
 zipp==3.15.0
