--- a/requirements.txt
+++ b/requirements.txt
@@ -1,34 +1,36 @@
 black==24.1.0
-bleach==6.0.0
-boto3==1.33.10
-botocore==1.33.10
+boto3==1.34.28
+botocore==1.34.28
 cachetools==5.3.2
 certifi==2023.11.17
-chardet==5.1.0
+chardet==5.2.0
 charset-normalizer==3.3.2
-click==8.1.3
+click==8.1.7
 colorama==0.4.6
-daves-dev-tools==2.0.8
+daves-dev-tools==2.0.12
 distlib==0.3.8
 docutils==0.20.1
+exceptiongroup==1.2.0
 filelock
 flake8==7.0.0
 idna==3.6
 importlib-metadata
+importlib-resources
 iniconfig==2.0.0
-isort==5.12.0
-jaraco.classes==3.2.3
+isort==5.13.2
+jaraco.classes==3.3.0
 jmespath==1.0.1
-keyring==24.2.0
+keyring==24.3.0
 localstack-client==2.5
-lxml==4.9.4
+lxml==5.1.0
 markdown-it-py==3.0.0
 mccabe==0.7.0
 mdurl==0.1.2
-more-itertools==9.1.0
+more-itertools==10.2.0
 mypy-extensions==1.0.0
 mypy==1.8.0
-packaging==23.1
+nh3==0.2.15
+packaging==23.2
 pathspec==0.12.1
 pkginfo==1.9.6
 platformdirs
@@ -36,25 +38,24 @@ pluggy==1.4.0
 py4j==0.10.9.7
 pycodestyle==2.11.1
 pyflakes==3.2.0
-Pygments==2.15.1
+pygments==2.17.2
 pyproject-api==1.6.1
 pyspark==3.5.0
 pytest==7.4.4
 python-dateutil==2.8.2
-readme-renderer==40.0
+readme-renderer==42.0
 requests-toolbelt==1.0.0
 requests==2.31.0
 rfc3986==2.0.0
-rich==13.4.2
-s3transfer==0.8.2
+rich==13.7.0
+s3transfer==0.10.0
 setuptools
 six==1.16.0
 tomli-w==1.0.0
 tomli==2.0.1
 tox==4.12.1
 twine==4.0.2
-typing-extensions==4.8.0
-urllib3==2.0.7
+typing-extensions==4.9.0
+urllib3==1.26.18
 virtualenv==20.25.0
-webencodings==0.5.1
-zipp==3.15.0
+zipp==3.17.0
