--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -32,10 +32,10 @@ jobs:
         python-version: ${{ matrix.python }}
     - name: Install docker on macos
       if: runner.os == 'macos'
-      run: brew install docker docker-compose
+      run: brew install docker-compose
     - name: Install docker on windows
       if: runner.os == 'windows'
-      run: choco install docker-cli docker-compose
+      run: choco install docker-compose
     - name: install
       run: make ci-install
     - name: test
