--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -30,6 +30,10 @@ jobs:
       uses: actions/setup-python@v5
       with:
         python-version: ${{ matrix.python }}
+    - uses: actions/setup-java@v4
+      with:
+        distribution: zulu
+        java-version: 8
     - name: Install docker on macos
       if: runner.os == 'macos'
       run: |
