--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -37,11 +37,13 @@ jobs:
     - name: Install docker on macos
       if: runner.os == 'macos'
       run: |
-        brew install docker-compose && \
-        brew upgrade docker-compose
+        brew install docker-slim docker-machine docker-compose && \
+        brew upgrade docker-slim docker-machine docker-compose
     - name: Install docker on windows
       if: runner.os == 'windows'
-      run: choco install docker-compose
+      run: |
+        choco install docker-compose docker-cli && \
+        choco upgrade docker-compose docker-cli
     - name: install
       run: make ci-install
     - name: test
