--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -17,7 +17,7 @@ jobs:
       matrix:
         os:
         - ubuntu-latest
-        # - windows-latest
+        # - windows-latest  # No manifest for windows yet
         - macos-latest
         python:
         - 3.8
