--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -38,8 +38,8 @@ jobs:
       if: runner.os == 'macos'
       run: |
         brew install docker docker-compose && \
-        colima start && \
-        sudo ln -sf $HOME/.colima/default/docker.sock /var/run/docker.sock
+        mkdir -p ~/.docker/cli-plugins && \
+        ln -sfn /usr/local/opt/docker-compose/bin/docker-compose ~/.docker/cli-plugins/docker-compose
     - name: Install docker on windows
       if: runner.os == 'windows'
       run: choco install docker-cli
