--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -18,7 +18,7 @@ jobs:
         os:
         - ubuntu-latest
         # - windows-latest  # No manifest for windows yet
-        - macos-13
+        - macos-latest
         python:
         - 3.8
         - 3.9
@@ -38,8 +38,10 @@ jobs:
       if: runner.os == 'macos'
       run: |
         brew install docker docker-compose && \
+        sudo ln -sf $HOME/.colima/default/docker.sock /var/run/docker.sock && \
         mkdir -p ~/.docker/cli-plugins && \
-        ln -sfn /usr/local/opt/docker-compose/bin/docker-compose ~/.docker/cli-plugins/docker-compose
+        ln -sfn /usr/local/opt/docker-compose/bin/docker-compose ~/.docker/cli-plugins/docker-compose && \
+        colima start
     - name: Install docker on windows
       if: runner.os == 'windows'
       run: choco install docker-cli
