--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -37,9 +37,10 @@ jobs:
     - name: Install docker on macos
       if: runner.os == 'macos'
       run: |
-        brew install docker docker-compose && \
+        brew install docker docker-compose colima && \
         mkdir -p ~/.docker/cli-plugins && \
-        ln -sfn /usr/local/opt/docker-compose/bin/docker-compose ~/.docker/cli-plugins/docker-compose
+        ln -sfn /usr/local/opt/docker-compose/bin/docker-compose ~/.docker/cli-plugins/docker-compose && \
+        sudo ln -sf ~/.colima/default/docker.sock /var/run/docker.sock
     - name: Install docker on windows
       if: runner.os == 'windows'
       run: choco install docker-cli
