--- a/tests/docker-compose.yml
+++ b/tests/docker-compose.yml
@@ -5,8 +5,8 @@ services:
     container_name: "${LOCALSTACK_DOCKER_NAME-localstack_main}"
     image: localstack/localstack
     ports:
-      - "localhost:4566:4566" # LocalStack Gateway
-      - "localhost:4510-4559:4510-4559" # external services port range
+      - "4566:4566" # LocalStack Gateway
+      - "4510-4559:4510-4559" # external services port range
     environment:
       - DEBUG=${DEBUG-}
       - PERSISTENCE=${PERSISTENCE-}
